# maky-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.maky/: auth_tokens.json
docs/: implementation.md  mvp-phase-guides.md  mvp-phases.md  phase-0-mvp-architecture.md  phase-1-mvp-architecture.md  phase-1-verification.md  phase-2-mvp-architecture.md  phase-3-mvp-architecture.md  phase-4-mvp-architecture.md  phase-5-mvp-architecture.md  phase-6-mvp-architecture.md  phase-7-mvp-architecture.md  phase-8-mvp-architecture.md  phase-9-mvp-architecture.md
research/: agent-cli-mvp-rust-ratatui.md
src/: cli.rs  main.rs  util.rs
src/agent/: mod.rs  session.rs  turn.rs
src/app/: controller.rs  event.rs  markdown.rs  mod.rs  state.rs  ui.rs
src/auth/: mod.rs  oauth_chatgpt.rs  provider.rs  token_store.rs
src/model/: types.rs
src/providers/: mod.rs  openai_responses.rs  provider.rs
src/storage/: config.rs  mod.rs  sessions.rs  sqlite_sessions.rs
src/tools/: exec.rs  ls.rs  mod.rs  read.rs  registry.rs
