[package]
name = "maky-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.29.0"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
webbrowser = "1.0.3"

[dev-dependencies]
tempfile = "3.23.0"
